feat(estilos): Agregar mejoras en los textos

--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">GIT</a>
+        <a class="navbar-brand estilosTextos" href="./index.html">GIT</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,22 +36,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="./home.html">Home</a>
+              <a class="nav-link estiloMenu" href="./home.html">Home</a>
             </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="./details.html">Details</a>
+              <a class="nav-link estiloMenu" href="./details.html">Details</a>
             </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="./tables.html">Tables</a>
+              <a class="nav-link estiloMenu" href="./tables.html">Tables</a>
             </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="./form.html">Form</a>
+              <a class="nav-link estiloMenu" href="./form.html">Form</a>
             </li>
           </ul>
         </div>
