feat(iconos y titulos): Agregar iconos y titulos

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             target="_blank"
             class="btn btn-success"
             style="border-radius: 50%"
+            title="Send us a message on WhatsApp"
           >
             <i class="fab fa-whatsapp fa-2x"></i>
           </a>
@@ -180,8 +181,36 @@
             target="_blank"
             class="btn btn-primary"
             style="border-radius: 50%"
+            title="Share on Facebook"
           >
             <i class="fab fa-facebook-f fa-2x"></i>
+          </a>
+          <a
+            href="https://x.com/intent/tweet?text=Hello%20World&url=https://example.com"
+            target="_blank"
+            class="btn btn-dark"
+            style="border-radius: 50%"
+            title="Share on Twitter"
+          >
+            <i class="fab fa-x fa-2x"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/sharing/share-offsite/?url=https://example.com"
+            target="_blank"
+            class="btn btn-primary"
+            style="border-radius: 50%"
+            title="Share on LinkedIn"
+          >
+            <i class="fab fa-linkedin-in fa-2x"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            class="btn btn-danger"
+            style="border-radius: 50%"
+            title="Follow us on Instagram"
+          >
+            <i class="fab fa-instagram fa-2x"></i>
           </a>
         </div>
       </div>
